--- a/src/partials/myProject.html
+++ b/src/partials/myProject.html
@@ -11,7 +11,7 @@
         </h5>
       </div>
       <ul class="box_project">
-        <!-- <li class="project_element is_loading">
+        <li class="project_element is_loading">
           <a href="https://yevhenii-sulim.github.io/feedback/">
             <img src="./images/images/feedback.png" alt="some" />
           </a>
@@ -114,10 +114,10 @@
           <div class="about_project">
             <p class="sign_project">My gitHub</p>
           </div>
-        </li> -->
+        </li>
       </ul>
-      <div id="mark"></div>
       <div class="border_progect">
+        <div id="mark"></div>
         <h5 class="hidden">
           В низу мої контакти, за якими Ви можете зв'язатися зі мною або перейти
           на інформаційні канали пром мене'
