--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -3,60 +3,63 @@
     <h2 class="title_product">MY SKILLS</h2>
     <div class="box_product">
       <div class="book_product">
-        <img src="./images/images/book-reserv.png" alt="book">
-        <p class="bookmark_product__logo mark">
-          ТМ «Чарівна мозаїка»
-        </p>
-        <p class="bookmark_product__home mark">
-          ТМ «Домашка»
-        </p>
-        <p class="bookmark_product__privat mark">
-          ТМ «Private Label»
-        </p>
+        <img src="./images/images/book-reserv.png" alt="book" />
+        <p class="bookmark_product__logo mark">ТМ «Чарівна мозаїка»</p>
+        <p class="bookmark_product__home mark">ТМ «Домашка»</p>
+        <p class="bookmark_product__privat mark">ТМ «Private Label»</p>
         <p class="tytle_book">MY SKILLS</p>
         <div class="box_about_technique">
           <ul class="box_technique">
             <li class="about_technique" data-atribute="html">
               <h4>Мова розмітки</h4>
               <div class="about_it">
-                <p><span>HTML (HyperText Markup Language)</span> - це стандартна мова розмітки для створення та
-                  структурування
-                  веб-сторінок.</p>
+                <p>
+                  <span>HTML (HyperText Markup Language)</span> - це стандартна
+                  мова розмітки для створення та структурування веб-сторінок.
+                </p>
               </div>
             </li>
             <li class="about_technique" data-atribute="css">
               <h4>Каскадна таблиця стилів</h4>
-              <p><span>CSS (Cascading Style Sheets)</span> - це мова стилів, яка використовується для оформлення
-                веб-документів.</p>
+              <p>
+                <span>CSS (Cascading Style Sheets)</span> - це мова стилів, яка
+                використовується для оформлення веб-документів.
+              </p>
             </li>
             <li class="about_technique" data-atribute="js">
               <h4>Мова програмування</h4>
-              <p><span>JavaScript (JS)</span> є мовою програмування, яка використовується для створення динамічного
-                контенту та інтерактивності на веб-сайтах</p>
+              <p>
+                <span>JavaScript (JS)</span> є мовою програмування, яка
+                використовується для створення динамічного контенту та
+                інтерактивності на веб-сайтах
+              </p>
             </li>
             <li class="about_technique" data-atribute="sass">
               <h4>Препроцесор</h4>
-              <p><span>"Sass" </span> - це препроцесор таблиць стилів (CSS), що надає додатковий функціонал та зручності
-                для написання та управління стилями
-                веб-сайтів.</p>
+              <p>
+                <span>"Sass" </span> - це препроцесор таблиць стилів (CSS), що
+                надає додатковий функціонал та зручності для написання та
+                управління стилями веб-сайтів.
+              </p>
             </li>
             <li class="about_technique" data-atribute="react">
               <h4>Сучасний фреймворк</h4>
-              <p><span>React</span> - це JavaScript бібліотека для створення інтерфейсів користувача, розроблена
-                компанією Facebook.</p>
+              <p>
+                <span>React</span> - це JavaScript бібліотека для створення
+                інтерфейсів користувача, розроблена компанією Facebook.
+              </p>
             </li>
           </ul>
         </div>
         <div class="box_switch_product">
-          <button type="button" class="prev_switch" data-atribute="prev">назад</button>
-          <button type="button" class="next_switch" data-atribute="next">вперед</button>
+          <button type="button" class="prev_switch" data-atribute="prev">
+            назад
+          </button>
+          <button type="button" class="next_switch" data-atribute="next">
+            вперед
+          </button>
         </div>
         <p class="details_product">Детальніше</p>
-      </div>
-      <div class="food_product">
-        <img src="./images/images/sandwich.png" alt="sandwich">
-        <h4 class="tytle_food">Печево ''Фронтендер''</h4>
-        <p class="text_food" id="observer_product">ТМ ''Чарівна мозаїка''</p>
       </div>
     </div>
   </div>
