--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,7 +25,7 @@
             >
           </li>
           <li class="contact telegram">
-            <a href="https://t.me/Jeka2191">
+            <a href="https://t.me/Yevgenii_21">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 50 50"
